@@ -1,3 +1,8 @@
+2009-09-23  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.CSharpBinding/TopLevelTests.cs: Fixed bug in
+	  unit test.
+
 2009-09-22  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Makefile.am:
